--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "game",
   "version": "0.1.0",
-  "private": true,
+  "author": "Jing Zhang <jzhang0522@gmail.com>",
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.2",
